<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/gradient_background">

    <!-- Message Bienvenue en haut -->
    <TextView
        android:id="@+id/textWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcomeapp"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        android:gravity="center" />

    <!-- Conteneur Image + Texte centré -->
    <LinearLayout
        android:id="@+id/contentLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

        <!-- Image centrée -->
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="128dp"
            android:layout_height="128dp"
            app:srcCompat="@drawable/logo"
            android:layout_gravity="center_horizontal" />

        <!-- Texte sous l'image -->
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appliname"
            android:textSize="24sp"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="8dp"
            android:gravity="center" />
    </LinearLayout>

    <!-- Conteneur des boutons côte à côte -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="32dp">

        <!-- Bouton Se Connecter -->
        <Button
            android:id="@+id/buttonConnect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/blue"
            android:text="@string/connect"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <!-- Bouton S'inscrire -->
        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/blue"
            android:text="@string/register"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>
