<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@android:color/black"
            android:padding="5dp">

            <!-- Flèche de retour -->
            <ImageView
                android:id="@+id/backArrow"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_back_arrow"
                android:contentDescription="Back" />

            <!-- Texte Connectez-vous -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="20sp"
                android:textColor="@android:color/white"
                android:layout_marginStart="8dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Partie gauche : Section de connexion -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:paddingEnd="16dp">

                <!-- Texte centré en haut -->
                <TextView
                    android:id="@+id/textIdentifiezVous"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textSize="24sp"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="15dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="16dp" />

                <!-- Email -->
                <LinearLayout
                    android:id="@+id/emailContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="12dp"
                    android:layout_marginBottom="8dp">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_email"
                        android:contentDescription="Icône email"
                        android:layout_gravity="center_vertical" />

                    <EditText
                        android:id="@+id/editEmail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@android:drawable/edit_text"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:padding="12dp"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:layout_marginStart="8dp" />
                </LinearLayout>

                <!-- Password -->
                <LinearLayout
                    android:id="@+id/passwordContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal"
                    android:padding="12dp">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="Icône password"
                        android:src="@drawable/ic_password" />

                    <EditText
                        android:id="@+id/editPassword"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:background="@android:drawable/edit_text"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:padding="12dp"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textForgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="8dp"
                    android:text="@string/forgot_password"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnConnect"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:padding="12dp"
                    android:text="@string/connect_account"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <!-- Barre supérieure -->
                <View
                    android:layout_width="2dp"
                    android:layout_height="80dp"
                    android:background="@color/dark_gray" />

                <!-- Texte "OU" -->
                <TextView
                    android:id="@+id/textOr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/or"
                    android:layout_marginVertical="8dp"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    android:gravity="center" />

                <!-- Barre inférieure -->
                <View
                    android:layout_width="2dp"
                    android:layout_height="80dp"
                    android:background="@color/dark_gray" />
            </LinearLayout>




            <!-- Partie droite : Autres options -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:paddingStart="20dp"
                android:paddingTop="50dp">

                <!-- Texte "Nouveau sur Jumia?" -->
                <TextView
                    android:id="@+id/textNewUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_account"
                    android:layout_marginTop="24dp"
                    android:layout_gravity="center_horizontal"
                    android:textSize="16sp" />

                <!-- Bouton "CRÉÉ UN COMPTE" -->
                <Button
                    android:id="@+id/btnConnect"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/create_account"
                    android:layout_marginTop="16dp"
                    android:padding="16dp"
                    android:backgroundTint="@color/colorAccent"
                    android:textColor="@android:color/white" />



                <!-- Bouton "Continue avec Facebook" -->
                <Button
                    android:id="@+id/btnFacebook"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="@color/facebookBlue"
                    android:drawablePadding="8dp"
                    android:padding="16dp"
                    android:text="@string/facebook"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>
