<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/gradient_background">

    <!-- Barre de titre avec flèche de retour et texte -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:background="@android:color/black">

        <!-- Flèche de retour -->
        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_back_arrow"
            android:contentDescription="Retour" />

        <!-- Texte Inscrivez-vous -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:layout_marginStart="8dp"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

    <TextView
        android:id="@+id/textRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginTop="12dp"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="12dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Champ pour le prénom -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_person"
                android:contentDescription="Icône FirstName"
                android:layout_gravity="center_vertical" />

            <EditText
                android:id="@+id/editFirstName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:drawable/edit_text"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                android:padding="12dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:layout_marginStart="8dp" />
        </LinearLayout>

        <!-- Champ pour le nom -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_badge"
                android:contentDescription="Icône LastName"
                android:layout_gravity="center_vertical" />

            <EditText
                android:id="@+id/editLastName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:drawable/edit_text"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                android:padding="12dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:layout_marginStart="8dp" />
        </LinearLayout>

        <!-- Champ pour l'email -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_email"
                android:contentDescription="Icône E-Mail"
                android:layout_gravity="center_vertical" />

            <EditText
                android:id="@+id/editRegisterMail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:drawable/edit_text"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:layout_marginStart="8dp" />
        </LinearLayout>

        <!-- Champ pour le mot de passe -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_password"
                android:contentDescription="Icône Password"
                android:layout_gravity="center_vertical" />

            <EditText
                android:id="@+id/editRegisterPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:drawable/edit_text"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:layout_marginStart="8dp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp">

            <!-- Icône téléphone -->
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_phone"
                android:contentDescription="Icône Téléphone"
                android:layout_gravity="center_vertical" />

            <!-- Spinner pour le préfixe -->
            <Spinner
                android:id="@+id/spinnerCountryCode"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_gravity="center_vertical"/>

            <!-- Champ de saisie du numéro de téléphone -->
            <EditText
                android:id="@+id/editPhoneNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:drawable/edit_text"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:padding="12dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:layout_marginStart="8dp" />
        </LinearLayout>

        <!-- Bouton d'inscription -->
        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:padding="16dp"
            android:text="@string/create_account"
            android:textColor="@android:color/white"
            android:layout_marginBottom="24dp" />

        <Button
            android:id="@+id/btnAlreadyHaveAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="16dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/already_have_account"
            android:textColor="@android:color/white" />
    </LinearLayout>
</LinearLayout>